[IMP] view for product page

--- a/payment_jetcheckout_system/static/src/scss/backend.scss
+++ b/payment_jetcheckout_system/static/src/scss/backend.scss
@@ -18,6 +18,8 @@
             input {
                 z-index: initial;
                 opacity: initial;
+                appearance: none;
+                -webkit-appearance: none;
 
                 &::before {
                     content: "";
