--- a/payment_jetcheckout_system/views/company.xml
+++ b/payment_jetcheckout_system/views/company.xml
@@ -20,4 +20,14 @@
         </xpath>
     </field>
     </record>
+
+    <record id="company_tree" model="ir.ui.view">
+    <field name="model">res.company</field>
+    <field name="inherit_id" ref="base.view_company_tree"/>
+    <field name="arch" type="xml">
+        <xpath expr="//tree" position="inside">
+            <field name="system" optional="hide"/>
+        </xpath>
+    </field>
+    </record>
 </odoo>
