--- a/payment_jetcheckout_system/views/partner.xml
+++ b/payment_jetcheckout_system/views/partner.xml
@@ -327,19 +327,19 @@
         <xpath expr="//field[@name='company_id']" position="attributes">
             <attribute name="invisible">1</attribute>
         </xpath>
-        <xpath expr="//field[@name='acc_number']" position="after">
+        <xpath expr="//field[@name='acc_type']" position="after">
             <field name="acc_holder_name"/>
             <field name="api_merchant" required="1"/>
             <label for="api_message" attrs="{'invisible': [('api_message', '=', False)]}"/>
-            <div class="o_row" attrs="{'invisible': [('api_message', '=', False)]}">
-                <field name="api_result" nolabel="1" style="max-width: 10px;"/>
+            <div class="d-flex" attrs="{'invisible': [('api_message', '=', False)]}">
+                <field name="api_result" nolabel="1" style="max-width: 16px;"/>
                 <field name="api_message" nolabel="1" readonly="1"/>
                 <field name="api_state" invisible="1"/>
             </div>
             <field name="currency_id" groups="base.group_multi_currency" options="{'no_create': True}"/>
         </xpath>
         <xpath expr="//field[@name='bank_id']" position="before">
-            <field name="api_token_ids" nolabel="1" attrs="{'invisible': [('payment_item_bank_token_ok', '=', False)]}">
+            <field name="api_token_ids" nolabel="1" colspan="2" attrs="{'invisible': [('payment_item_bank_token_ok', '=', False)]}">
                 <tree editable="bottom">
                     <field name="sequence" widget="handle"/>
                     <field name="api_ref" readonly="1" force_save="1"/>
@@ -355,6 +355,12 @@
                 </tree>
             </field>
             <field name="payment_item_bank_token_ok" invisible="1"/>
+        </xpath>
+        <xpath expr="//group" position="attributes">
+            <attribute name="class">d-flex</attribute>
+        </xpath>
+        <xpath expr="//group/group" position="attributes">
+            <attribute name="class">h-25</attribute>
         </xpath>
     </field>
     </record>
