--- a/payment_jetcheckout_system/views/partner.xml
+++ b/payment_jetcheckout_system/views/partner.xml
@@ -329,7 +329,7 @@
         </xpath>
         <xpath expr="//field[@name='acc_type']" position="after">
             <field name="acc_holder_name"/>
-            <field name="api_merchant" required="1"/>
+            <field name="api_merchant" attrs="{'invisible': [('payment_item_bank_token_ok', '=', False)], 'required': [('payment_item_bank_token_ok', '!=', False)]}"/>
             <label for="api_message" attrs="{'invisible': [('api_message', '=', False)]}"/>
             <div class="d-flex" attrs="{'invisible': [('api_message', '=', False)]}">
                 <field name="api_result" nolabel="1" style="max-width: 16px;"/>
@@ -343,10 +343,10 @@
                 <tree editable="bottom">
                     <field name="sequence" widget="handle"/>
                     <field name="api_ref" readonly="1" force_save="1"/>
-                    <field name="item_ok" string="Linked"/>
                     <field name="item_ids" invisible="1"/>
                     <field name="acc_number" invisible="1"/>
-                    <field name="api_merchant" invisible="1"/>
+                    <field name="api_merchant" required="1"/>
+                    <field name="item_ok" string="Linked"/>
                     <field name="api_result" string=" " width="0.1"/>
                     <field name="api_message" optional="hide"/>
                     <field name="api_state" invisible="1"/>
