--- a/payment_supplier/views/partner.xml
+++ b/payment_supplier/views/partner.xml
@@ -142,7 +142,7 @@
                     <tree>
                         <field name="sequence" widget="handle"/>
                         <field name="acc_number"/>
-                        <field name="api_merchant" required="1"/>
+                        <field name="acc_holder_name"/>
                         <field name="api_result" string=" " width="0.1"/>
                         <field name="api_message" optional="hide"/>
                         <field name="api_state" invisible="1"/>
@@ -158,7 +158,6 @@
                             <group class="d-flex">
                                 <group class="h-25">
                                     <field name="acc_holder_name"/>
-                                    <field name="api_merchant" required="1"/>
                                     <label for="api_message" attrs="{'invisible': [('api_message', '=', False)]}"/>
                                     <div class="o_row" attrs="{'invisible': [('api_message', '=', False)]}">
                                         <field name="api_result" nolabel="1" style="max-width: 10px;"/>
@@ -171,10 +170,10 @@
                                         <tree editable="bottom">
                                             <field name="sequence" widget="handle"/>
                                             <field name="api_ref" readonly="1" force_save="1"/>
-                                            <field name="item_ok" string="Linked"/>
                                             <field name="item_ids" invisible="1"/>
                                             <field name="acc_number" invisible="1"/>
-                                            <field name="api_merchant" invisible="1"/>
+                                            <field name="api_merchant" required="1"/>
+                                            <field name="item_ok" string="Linked"/>
                                             <field name="api_result" string=" " width="0.1"/>
                                             <field name="api_message" optional="hide"/>
                                             <field name="api_state" invisible="1"/>
