--- a/payment_jetcheckout_system/views/partner.xml
+++ b/payment_jetcheckout_system/views/partner.xml
@@ -350,7 +350,7 @@
                     <field name="api_result" string=" " width="0.1"/>
                     <field name="api_message" optional="hide"/>
                     <field name="api_state" invisible="1"/>
-                    <button name="action_api_save" string="" type="object" class="btn btn-link text-primary" icon="fa-save mr-1" attrs="{'invisible': [('api_state', '=', True)]}"/>
+                    <button name="action_api_save" string="" type="object" class="btn btn-link text-primary" icon="fa-save mr-1"/>
                     <button name="action_api_query" string="" type="object" class="btn btn-link text-primary" icon="fa-search mr-1" attrs="{'invisible': [('acc_number', '=', False)]}"/>
                 </tree>
             </field>
