--- a/payment_oco/views/partner.xml
+++ b/payment_oco/views/partner.xml
@@ -7,6 +7,9 @@
     <field name="inherit_id" ref="payment_jetcheckout_system.partner_tree"/>
     <field name="arch" type="xml">
         <xpath expr='//field[@name="parent_id"]' position="replace"/>
+        <xpath expr='//field[@name="name"]' position="after">
+            <field name="ref" string="Reference" optional="show"/>
+        </xpath>
         <xpath expr='//field[@name="email"]' position="after">
             <field name="campaign_id" string="Campaign" optional="show"/>
             <field name="is_portal" string="Authorized"/>
