--- a/payment_jetcheckout_system/views/actions.xml
+++ b/payment_jetcheckout_system/views/actions.xml
@@ -4,7 +4,7 @@
     <field name="name">Websites</field>
     <field name="res_model">website</field>
     <field name="view_mode">tree,form</field>
-    <field name="domain">[('company_id', '=', allowed_company_ids[0])]</field>
+    <field name="domain">[('company_id', 'in', allowed_company_ids)]</field>
     </record>
 
     <record id="action_mail_template" model="ir.actions.act_window">
@@ -12,6 +12,7 @@
     <field name="res_model">mail.template</field>
     <field name="view_mode">tree,form</field>
     <field name="context">{'settings': True}</field>
+    <field name="domain">['|', ('company_id', '=', False), ('company_id', 'in', allowed_company_ids)]</field>
     </record>
 
     <record id="action_mail_server" model="ir.actions.act_window">
@@ -19,6 +20,7 @@
     <field name="res_model">ir.mail_server</field>
     <field name="view_mode">tree,form</field>
     <field name="context">{'settings': True}</field>
+    <field name="domain">[('company_id', 'in', allowed_company_ids)]</field>
     </record>
 
     <record id="action_sms_template" model="ir.actions.act_window">
@@ -26,6 +28,16 @@
     <field name="res_model">sms.template</field>
     <field name="view_mode">tree,form</field>
     <field name="context">{'settings': True}</field>
+    <field name="domain">['|', ('company_id', '=', False), ('company_id', 'in', allowed_company_ids)]</field>
+    </record>
+
+    <record id="action_sms_provider" model="ir.actions.act_window">
+    <field name="name">SMS Providers</field>
+    <field name="res_model">sms.provider</field>
+    <field name="view_mode">tree</field>
+    <field name="domain">['|',('active','=',False),('active','=',True)]</field>
+    <field name="context">{'settings': True}</field>
+    <field name="domain">['&amp;', '|', ('active', '=', False), ('active', '=', True), '|', ('company_id', '=', False), ('company_id', 'in', allowed_company_ids)]</field>
     </record>
 
     <record id="action_partner_team" model="ir.actions.act_window">
@@ -47,14 +59,7 @@
     <field name="res_model">payment.acquirer</field>
     <field name="view_mode">tree,form</field>
     <field name="context">{'settings': True}</field>
-    </record>
-
-    <record id="action_sms_provider" model="ir.actions.act_window">
-    <field name="name">SMS Providers</field>
-    <field name="res_model">sms.provider</field>
-    <field name="view_mode">tree</field>
-    <field name="domain">['|',('active','=',False),('active','=',True)]</field>
-    <field name="context">{'settings': True}</field>
+    <field name="domain">[('provider', '=', 'jetcheckout')]</field>
     </record>
 
     <record id="action_transaction" model="ir.actions.act_window">
@@ -159,7 +164,7 @@
     <field name="name">Users</field>
     <field name="res_model">res.users</field>
     <field name="view_mode">tree,form</field>
-    <field name="domain">['|', ('active', '=', False),('active', '=', True)]</field>
+    <field name="domain">['|', ('active', '=', False), ('active', '=', True)]</field>
     <field name="context">{'search_default_no_share': 1}</field>
     <field name="view_ids" eval="[
         (5, 0, 0),
