--- a/payment_system_agreement/views/agreement.xml
+++ b/payment_system_agreement/views/agreement.xml
@@ -25,6 +25,12 @@
                         <field name="name" colspan="2" nolabel="1"/>
                         <separator string="Version"/>
                         <field name="version" colspan="2" nolabel="1"/>
+                        <separator string="Checked"/>
+                        <div colspan="2" class="d-flex align-items-middle">
+                            <em class="text-muted">Unchecked</em>
+                            <field name="checked" widget="boolean_toggle" colspan="2" nolabel="1"/>
+                            <em class="text-muted">Checked</em>
+                        </div>
                         <separator string="Pages" class="mt16"/>
                         <field name="page_ids" widget="many2many_checkboxes" options="{'no_create': True, 'no_open': True}" colspan="2" nolabel="1"/>
                         <separator string="Products" class="mt16"/>
