--- a/payment_jetcheckout/views/templates.xml
+++ b/payment_jetcheckout/views/templates.xml
@@ -384,10 +384,13 @@
                                     </label>
                                 </div>
                             </div>
-                            <!--<div class="field-container">
-                                <button class="btn btn-paylox-token border-0 text-primary font-weight-bold" field="card.token.popup">Saved Cards</button>
-                                <button class="btn btn-paylox-point border-0 text-primary font-weight-bold" field="card.point">Query Points</button>
-                            </div>-->
+                            <div class="field-container">
+                                <div t-if="company.payment_token_ok">
+                                    <div field="card.token.all"/>
+                                    <button class="btn btn-paylox-token border-0 text-primary font-weight-bold" field="card.token.ok">Save Card</button>
+                                </div>
+                                <!--<button class="btn btn-paylox-point border-0 text-primary font-weight-bold" field="card.point">Query Points</button>-->
+                            </div>
                         </div>
                     </div>
                     <div class="payment-table mt-2 p-3 col-md-6">
